--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,13 @@
         "PYTHONPATH": "${workspaceFolder}"
       },
       "envFile": "${workspaceFolder}/.env"
+    },
+    {
+      "name": "Attach (Remote Debug)",
+      "type": "python",
+      "request": "attach",
+      "port": 3000,
+      "host": "localhost"
     }
   ]
 }
