CORS fix Docs of multiprocessing implementation Authentication token

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
     "--disable=R",
     "--disable=C",
     "--unsafe-load-any-extension=y"
-  ]  
+  ],
+  "python.linting.pylintEnabled": true,
+  "python.linting.enabled": true
 }
