--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "python",
       "request": "launch",
       "stopOnEntry": false,
-      "pythonPath":"${config:python.pythonPath}",
+      "pythonPath":"${config:python.interpreterPath}",
       "program": "${file}",
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
